[SL-2524] adds GET param for chipType to runs api.
